<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/question_text_size"
            tools:text="@string/demo_question" />

        <RadioGroup
            android:id="@+id/optionsRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/optionRadio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/demo_opt1"
                android:textSize="@dimen/option_text_size" />

            <RadioButton
                android:id="@+id/optionRadio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_opt2" />

            <RadioButton
                android:id="@+id/optionRadio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_opt3" />

            <RadioButton
                android:id="@+id/optionRadio4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_opt4" />
        </RadioGroup>


    </LinearLayout>
</layout>